# GeminiGraph

./: .gitignore  CMakeLists.txt
core/: atomic.hpp  bitmap.hpp  filesystem.hpp  graph.hpp  mpi.hpp  time.hpp  type.hpp
toolkits/: bc.cpp  bfs.cpp  cc.cpp  pagerank.cpp  sssp.cpp
